--- a/nav.css
+++ b/nav.css
@@ -6,6 +6,7 @@
     justify-content:space-between;
     padding-top: 10px;
     margin-top: 10px;
+    border: 1px solid red;
 }
 #comlogo{
     height:35px;
@@ -13,6 +14,7 @@
     margin-left: 60px;
     margin-top: 10px;
     border-radius: 9px;
+    border: 1px solid red;
 
 }
 #left{
@@ -20,6 +22,7 @@
     width: 80%;
     display: flex;
     justify-content: space-around;
+    border: 1px solid red;
 }
 #left>p{
     font-weight: bold;
@@ -30,6 +33,7 @@
       display: flex;
       justify-content: space-around;
       /* align-items: center; */
+      border: 1px solid blue;
 }
 .drop{
     display: none;
@@ -37,11 +41,12 @@
     position: absolute;
     /* border: 1px solid black; */
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    width: 99%;
+    width: 80%;
     height: auto;
     background-color: whitesmoke;
     z-index: 1;    
     top: 65px;
+    border: 1px solid blue;
 }
 .drop a{
     text-decoration: none;
@@ -108,6 +113,7 @@
 .ham{
     display: none;
     cursor: pointer;
+   /* min-width: 100%; */
 }
 .bar{
     display: block;
@@ -126,7 +132,17 @@
 
 /* media query */
 
-@media screen and (min-width:510px) and (max-width:900px){
+/* medium screen */
+
+@media screen and (min-width:650px) and (max-width:900px){
+    #nav{
+        width:100%;
+        height:50px;
+        display:flex;
+        justify-content:space-between;
+        padding-top: 10px;
+        margin-top: 10px;
+    }
     #left{
         width: 100%;
         margin: auto;
