--- a/index.css
+++ b/index.css
@@ -386,3 +386,89 @@ width:150px;
 
 
 }
+@media screen and (max-width:649px) and (min-width:450px) {
+
+
+  .car{
+    width:100%;
+}
+.cont{
+    display: flex;
+    flex-direction: column;
+}
+.ceoimg{
+    width: 100%;
+    order: -1;
+}
+.ceo{
+    width: 50%;
+    height: 300px;
+    margin-right: 90px;
+}
+.content{
+    order: 1;
+    width: 100%;
+}
+.infcar{
+  /* display: none; */
+    margin-top: 580px;
+    width: 100%;
+    border:1px solid blue;
+    
+}
+.carcont img{
+  width:5%;
+}
+.carcont{
+  list-style: none;
+  height: 100%;
+  display: flex;
+  
+  border:1px solid blue;
+  animation: scrolling 10s linear infinite;
+}
+@keyframes scrolling {
+  0% {
+      transform: translateX(0);
+  }
+
+  100% {
+      transform: translateX(-100vw);
+  }
+}
+.flickity-page-dots {
+    display: none;
+    position: absolute;
+    width: 100%;
+    bottom: -300px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    line-height: 1;
+  }
+
+  #parchat{
+    display:flex; 
+    flex-direction: row-reverse;
+    width: 50%;
+    display: none;
+    
+} 
+/* .infcar{
+  width: 100%;
+  height: 60px;
+  margin: auto;
+  
+  margin-top: 280px;
+  background-color:#e6e6e6;
+  color: #fff;
+  /* overflow: hidden; */
+  /* border: 1px solid red; */
+} */
+
+
+
+
+
+}
