--- a/nav.css
+++ b/nav.css
@@ -239,3 +239,99 @@
 
 
 }
+@media screen and (max-width:649px) and (min-width:450px) {
+
+    #nav{
+        width:100%;
+        height:50px;
+        display:flex;
+        justify-content:space-between;
+        padding-top: 10px;
+        margin-top: 10px;
+    }
+    #left{
+        width: 50%;
+        margin: auto;
+        flex-direction: column;
+        
+        
+    }
+    .contain{
+        height: auto;
+        position: none;
+    }
+    .head1{
+        width: 100%;
+        line-height: 50px;
+        margin: auto;
+    }
+    .drop{
+        width: 100%;
+        z-index: auto;
+        margin-left: 0px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+        cursor: auto;
+        position: static;
+        color: blue;
+        margin-top: 10px;
+    }
+    #droptwo{
+        margin-left: 0px;
+        color: #333;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .droplist{
+        display: none;
+    }
+    #dropthree{
+        display:none;
+    }
+    .hov{
+        pointer-events:none;
+    }
+    #right{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        /* align-items: stretch; */
+    }
+    .ham{
+        display: block;
+    }
+    .ham.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .ham.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .ham.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    #left{
+        position:fixed;
+        left: 100%;
+        top: 80px;
+        
+        min-width: 100%;
+        transition: 0.3s;
+        background-color: white;
+        z-index: 2;
+        /* overflow-y:scroll; */
+        min-height:100%;
+    }
+    #comlogo{
+        height:35px;
+        width:140px;
+        margin-left: 0px;
+        margin-top: 0px;
+        border-radius: 9px;
+    
+    }
+    #left.active, #right.active{
+        left: 0;
+    }
+}
