--- a/signin1.css
+++ b/signin1.css
@@ -25,6 +25,49 @@
     width: 50%;
     /* border: 1px solid red; */
 }
+#tex{
+    text-align: center;
+    width: 90%;
+    margin: auto;
+}
+
+#nonav{
+    display: flex;
+    /* border: 1px solid; */
+    width: 95%;
+    justify-content: space-between;
+    margin:auto;
+    height:55px;
+    top:0;
+    bottom:0;
+    margin-top: -20px;
+    margin-bottom: 40px;
+
+}
+#nonav1{
+    height:35px;
+}
+#nonav2{
+    height:35px;
+}
+#nonav2 a{
+    text-decoration: none;
+    color: #ee7225;
+}
+
+
+#nonav1 img{
+    height:35px;
+        width:160px;
+        margin-left: 0px;
+        /* margin-top: 0px; */
+        border-radius: 9px;
+}
+#nonav2{
+        
+    padding: 10px;
+    
+}
 
 
 
@@ -34,7 +77,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: linear-gradient(45deg, #131086, #b621f3);
+    background: linear-gradient(45deg, #eaeaf4, #929092);
     padding: 50px;
 }
 
@@ -198,6 +241,11 @@ button {
         /* border: 1px solid blue; */
         width: 100%;
     }
+    #nonav2{
+        
+        padding: 10px;
+        
+    }
     
     
 
@@ -217,6 +265,29 @@ button {
     .login-right {
         display: none;
     }
-
+    #nonav{
+        display: flex;
+        /* border: 1px solid; */
+        width: 100%;
+        justify-content: space-between;
+        margin:auto;
+        height:55px;
+        top:0;
+        bottom:0;
+        /* margin-top: -10px; */
+        margin-bottom: 40px;
+    }
+    #nonav2{
+        
+        padding: 10px;
+        
+    }
+    #nonav1 img{
+        height:35px;
+            width:160px;
+            margin-top: 5px;
+            margin-left: 5px;
+            border-radius: 9px;
+    }
 
 }
