--- a/demo.css
+++ b/demo.css
@@ -1,73 +1,55 @@
 
- .top_bg{
+ #elevateparent{
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(106.71deg,#4300a3 11.13%,#6100bb 85.15%,#a700f1 116.91%);
       background-color: #5b00b6;
-      /* top: 0; */
-          /* right: 15px; */
-          /* bottom: 0; */
-          /* left: 0; */
-          width: 99%;
-          /* border-radius:  100px; */
-          /* transform: rotate(-10deg); */
-          /* transform-origin: left; */
-           height: 50rem; 
-          position: absolute;
-          background: linear-gradient(106.71deg, #4300A3 11.13%, #6100BB 65.15%, #A700F1 96.91%);
-          z-index: -1; 
-          border: 1px solid red;
+      
+          
  }
-#logo{
-display: flex;
-border: 1px solid red;
-/* background-color: white; */
-height: 130px;
-width: 90%;
-margin-bottom: 10px;
-/* margin-top: 90px; */
-display: block;
-}
-#logo img{
-width: 9%;
-margin: 0px 0px 0px 1000px;
-margin-top: 70px;
-/* border: 1px solid red; */
-}
-#heading{
-display: flex;
-/* margin: auto; */
-width: 100%;
-border: 1px solid yellow;
-}
-#para{
-height: auto;
-width: 30%;
-border: 1px solid red;
-font-size: 30px;
-margin-left: 200px;
-font-weight:700;
-}
-#para>h1{
-margin-bottom: -30px;
-border: 1px solid red;
-}
-h1{
-      font-size: 50px;
-      font-weight: 800;
+ #imgtop img{
+      height:35px;
+    width:150px;
+    margin-left: 50px;
+    margin-top: 10px;
+    /* border-radius: 9px; */
+    /* border: 1px solid red; */
+ }
+ #imgtop{
+      width: 100%;
+      /* border: solid; */
+ }
+ #elevatechild{
+      display: flex;
+      /* border:  solid; */
+      width: 70%;
+      margin: auto;
+      justify-content: center;
+      align-items: center;
+ }
+ #elachild1{
+      width: 60%;
+      line-height: 40px;
+      /* border: 1px solid blue; */
       color: white;
-      /* border: 1px solid red; */
-}
-h6{
-      color: white;
-      /* border: 1px solid red; */
-}
+      
+ }
+ #oneimg{
+      width: 70%;
+      margin: auto;
+      display: block;
+ }
+
+
 #form{
 background: #fff;
 box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
 border-radius: 4px;
-width: 30%;
+width: 70%;
 padding: 55px 25px;
 box-sizing: border-box;
 margin-left: 140px;
-border: 1px solid blue;
+/* border: 1px solid blue; */
 
 }
 .inputs{
@@ -109,6 +91,46 @@ a{
        color: blue;
       font-weight: 500;
 }
+#dailpar{
+      display: flex;
+      width: 50%;
+      margin: auto;
+      /* border: solid; */
+      height:100%;
+      justify-content: space-between;
+}
+#dailchild1{
+      /* border: solid; */
+      width: 50%;
+      margin: auto;
+      line-height: 30px;
+
+}
+#dailchild1 p{
+      font-size: 20px;
+}
+
+#dailchild2{
+      /* border:solid; */
+      height:100%;
+      width: 40%;
+      margin-left: 60px;
+      margin-top: 100px;
+}
+#dc12{
+      width:50%;
+      height:220px;
+      margin-left: 50px;
+
+}
+#horline{
+      /* border:1px solid; */
+      width: 80%;
+}
+#dc13{
+      margin-left: 110px;
+      /* display: block; */
+}
 
 
 
@@ -125,29 +147,151 @@ a{
 
 
 
-    #para{
-        height: auto;
-        width: 20%;
-        border: 1px solid red;
-        font-size: 30px;
-        display: none;
-        font-weight:700;
-        }
+    
 
         #form{
             background: #fff;
             box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
             border-radius: 4px;
-            width: 70%;
+            width: 80%;
             padding: 55px 25px;
             box-sizing: border-box;
-            /* margin-left: 140px; */
-            border: 1px solid blue;
+            
+            /* border: 1px solid blue; */
             
             }
 
             #oneimg{
                 width: 90%;
             }
+            #elevatechild{
+                  display: flex;
+                  /* border:  solid; */
+                  width: 90%;
+                  margin: auto;
+                  justify-content: center;
+                  align-items: center;
+             }
+             #elachild1{
+                  width: 60%;
+                  line-height: 40px;
+                  /* border: 1px solid blue; */
+                  color: white;
+                  
+             }
+             #dailpar{
+                  display: flex;
+                  width: 100%;
+                  margin: auto;
+                  /* border: solid; */
+                  height:100%;
+                  justify-content: space-between;
+            }
+            #dailchild1{
+                  /* border: solid; */
+                  width: 60%;
+                  margin: auto;
+                  line-height: 30px;
+            
+            }
+            #dailchild1 p{
+                  font-size: 20px;
+            }
+            
+            #dailchild2{
+                  /* border:solid; */
+                  height:100%;
+                  width: 60%;
+                  /* margin-left: 60px; */
+                  margin-top: 170px;
+            }
+            #dc12{
+                  width:50%;
+                  height:220px;
+                  margin-left: 50px;
+            
+            }
+            #dc13{
+                  margin-left: 0px;
+                  /* display: block; */
+            }
+            #horline{
+                  /* border:1px solid; */
+                  width: 90%;
+            }
          
+        }
+        @media screen and (max-width:649px) and (min-width:450px) {
+#elachild1{
+      display: none;
+}
+#form{
+      background: #fff;
+      box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+      border-radius: 4px;
+      width: 90%;
+      padding: 55px 25px;
+      box-sizing: border-box;
+      margin-left: 0px;;
+      /* border: 1px solid blue; */
+      
+      }
+      #elevatechild{
+            display: flex;
+            /* border:  solid; */
+            width: 100%;
+            margin: auto;
+            justify-content: center;
+            align-items: center;
+       }
+
+       #dc13{
+            margin-left: 0px;
+            display: block;
+      }
+      #dc12{
+            width:50%;
+            height:220px;
+            margin-left: 50px;
+      
+      }
+      #dailpar{
+            display: flex;
+            width: 100%;
+            margin: auto;
+            /* border: solid; */
+            height:100%;
+            /* justify-content: space-between; */
+            flex-direction: column;
+      }
+      #dailchild1{
+            /* border: solid; */
+            width: 60%;
+            margin: auto;
+            line-height: 30px;
+      
+      }
+
+      #dailchild2{
+            /* border:solid; */
+            height:70%;
+            width: 60%;
+            /* margin-left: 60px; */
+            margin-top: 0px;
+      }
+      #dc12{
+            width:70%;
+            height:220px;
+            /* margin-left: 50px; */
+      
+      }
+
+      #horline{
+            /* border:1px solid; */
+            width: 90%;
+      }
+      #dc11{
+            display: none;
+      }
+
         }
