--- a/design.css
+++ b/design.css
@@ -1,6 +1,6 @@
 #designparent{
     display: flex;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height:550px;
     width:100%;
 }
@@ -14,7 +14,8 @@
     margin-left: 40px;
     margin-top: 20px;
     margin-right: 60px;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
+    
 }
 #designchild1 h1{
  line-height: 40px;
@@ -39,7 +40,7 @@
     margin-top: 20px;
     padding-left: 20px;
     padding-top: 20px;
-    border:1px solid yellow;
+    /* border:1px solid yellow; */
     width:100%;
  }
  #designchild2 div{
@@ -48,7 +49,7 @@
     height:180px;
     border-radius: 20px;
     padding: 20px;
-    border:1px solid red;
+    /* border:1px solid red; */
  }
  #designchild2 div:hover{
     cursor: pointer;
@@ -62,7 +63,7 @@
  @media screen and (min-width:650px) and (max-width:900px){
     #designparent{
         display: flex;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         /* height:90%; */
         flex-direction: column;
         /* border: 1px solid red; */
@@ -80,26 +81,35 @@
         margin-left: 120px;
         
      }
+     #designchild1{
+      width:400px;
+      margin-left: 40px;
+      margin-top: 20px;
+      margin-right: 60px;
+      /* border: 1px solid blue; */
+      margin: auto;
+      
+  }
      #designchild2 div{
-        width:65%;
+        width:70%;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         height:200px;
         border-radius: 20px;
         padding: 20px;
-        border:1px solid red;
+        /* border:1px solid red; */
      }
      #designchild2{
         display: grid;
-        grid-template-columns: repeat(2,350px);
+        grid-template-columns: repeat(2,300px);
         grid-template-rows: repeat(2,250px);
         /* border: 1px solid ; */
         margin-top: 20px;
         /* padding-left: 20px; */
         /* padding-top: 20px; */
         padding:10px;
-        border:1px solid yellow;
+        /* border:1px solid yellow; */
         width:95%;
-        /* justify-content: center; */
+        justify-content: center;
         /* align-items: center; */
         height:60%
      }
@@ -112,7 +122,7 @@
  @media screen and (max-width:649px) and (min-width:450px) {
    #designparent{
       display: flex;
-      border: 1px solid red;
+      /* border: 1px solid red; */
       
       flex-direction: column;
       
@@ -135,7 +145,7 @@
       height:200px;
       border-radius: 20px;
       padding: 20px;
-      border:1px solid red;
+      /* border:1px solid red; */
    }
    #designchild2{
       display: grid;
@@ -145,7 +155,7 @@
       margin-top: 20px;
       
       padding:10px;
-      border:1px solid yellow;
+      /* border:1px solid yellow; */
       width:95%;
       
       height:70%;
@@ -156,7 +166,7 @@
       margin-left: 65px;
       margin-top: 20px;
       /* margin-right: 60px; */
-      border: 1px solid blue;
+      /* border: 1px solid blue; */
   }
   #designchild2 div a{
    margin-left: 120px;
