--- a/signup.css
+++ b/signup.css
@@ -277,6 +277,7 @@ https://flickity.metafizzy.co
   #lowimg{
     width:550px;
     /* border: 1px solid red; */
+    
   }
 
 
@@ -319,8 +320,9 @@ https://flickity.metafizzy.co
     cursor: pointer;
   } 
   #lowimg{
-    width:100%;
+    width:90%;
     /* border: 1px solid red; */
+    margin-bottom: 30px;
   }
   /* .flickity-page-dots {
     
@@ -354,7 +356,7 @@ https://flickity.metafizzy.co
     #lowimg{
         width:90%;
         /* border: 1px solid red; */
-        margin-top: 30px;
+        margin-bottom: 30px;
         align-items: center;
       }
 
