--- a/index.css
+++ b/index.css
@@ -7,10 +7,16 @@
     display:flex; 
     flex-direction: row-reverse;
     width: 90%;
+    /* border-radius: 40px; */
+    
     
 } 
 #chat{
-    position:sticky
+    position:sticky;
+    /* border-radius: 40px; */
+   
+    
+    
 } 
 #chat img{
     height: 80px;
@@ -18,6 +24,8 @@
     bottom: 0;
     position: fixed;
     /* margin-left: 90%; */
+    border-radius: 40px;
+    
     
 }
 
@@ -54,6 +62,11 @@
     margin-top: 20px;
     
 }
+.pricenav{
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+      }
 .heading{
     font-size: 2.5rem;
     margin-top: 20px;
@@ -81,17 +94,26 @@
   background-color: violet;
 
 }
-.btn1{
+.btn100{
     padding: 8px;
     border-radius: 30px;
     /* border: 1px solid black; */
     height:35px;
-    background-color: white;
+    /* background-color: white; */
+    color: white;
     margin-left: 30px;
     margin-top: 20px;
+    border: none;
+    background-color: #7100c4;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
     
 }
+.btn100:hover{
+  background-color: violet;
 
+}
 a {
     text-decoration: none;
     /* color: #fff; */
@@ -293,7 +315,7 @@ a {
     display: flex;
     
     /* border:1px solid blue; */
-    animation: scrolling 10s linear infinite;
+    animation: scrolling 20s linear infinite;
 }
 @keyframes scrolling {
     0% {
@@ -348,7 +370,7 @@ width:150px;
       /* display: none; */
         margin-top: 480px;
         min-width: 90%;
-        border:1px solid blue;
+        /* border:1px solid blue; */
         
     }
     .carcont img{
@@ -359,7 +381,7 @@ width:150px;
       height: 100%;
       display: flex;
       
-      border:1px solid blue;
+      /* border:1px solid blue; */
       animation: scrolling 10s linear infinite;
   }
   @keyframes scrolling {
@@ -413,7 +435,7 @@ width:150px;
   /* display: none; */
     margin-top: 580px;
     width: 100%;
-    border:1px solid blue;
+    /* border:1px solid blue; */
     
 }
 .carcont img{
@@ -424,7 +446,7 @@ width:150px;
   height: 100%;
   display: flex;
   
-  border:1px solid blue;
+  /* border:1px solid blue; */
   animation: scrolling 10s linear infinite;
 }
 @keyframes scrolling {
@@ -472,3 +494,4 @@ width:150px;
 
 
 }
+
