--- a/nav.css
+++ b/nav.css
@@ -6,7 +6,10 @@
     justify-content:space-between;
     padding-top: 10px;
     margin-top: 10px;
-    border: 1px solid red;
+    /* border: 1px solid #5900b4; */
+}
+.switchdark3:hover{
+    cursor: pointer;
 }
 #comlogo{
     height:35px;
@@ -14,7 +17,7 @@
     margin-left: 60px;
     margin-top: 10px;
     border-radius: 9px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 #left{
@@ -22,18 +25,16 @@
     width: 80%;
     display: flex;
     justify-content: space-around;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
-#left>p{
-    font-weight: bold;
-}
+
 #right{
       /* border: 1px solid red; */
       width: 32%; 
       display: flex;
       justify-content: space-around;
       /* align-items: center; */
-      border: 1px solid blue;
+      /* border: 1px solid blue; */
 }
 .drop{
     display: none;
@@ -46,7 +47,7 @@
     background-color: whitesmoke;
     z-index: 1;    
     top: 65px;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 .drop a{
     text-decoration: none;
@@ -76,7 +77,7 @@
     font-size: 13px;
 }
 /* demo button */
-#demobtn{
+#ademobtn{
     height: 35px;
     width: 120px;
     border: none;
@@ -86,10 +87,17 @@
     font-weight: bold;
     margin-top:10px;
 }
-#demobtn:hover{
-    cursor: pointer;
+#adem{
+    color: white;
 }
-
+#ademobtn:hover{
+    cursor: pointer;
+    transform: translate(5px);
+    background-color: #4300a3;
+}
+.aget{
+    color: black;
+}
 /* resources */
 
 #dropleft{
@@ -106,7 +114,10 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-
+.effecthov:hover{
+    transform: translateX(5px);
+    color: #4300a3;
+}
 
 /* hamburger menu */
 
@@ -158,6 +169,7 @@
         line-height: 50px;
         margin: auto;
     }
+    
     .drop{
         width: 100%;
         z-index: auto;
@@ -335,3 +347,4 @@
         left: 0;
     }
 }
+
