--- a/pricing.css
+++ b/pricing.css
@@ -4,13 +4,26 @@
     height:100%;
     /* padding:10px; */
     color: white;
-    border: 1px solid red;
+    border: 0.5px solid #5900b4
 }
+#parchat{
+    display: none;
+}
+#nav{
+    width:100%;
+    height:50px;
+    display:flex;
+    justify-content:space-between;
+    padding-top: 10px;
+    margin-top: 10px;
+    /* border: 1px solid #5900b4; */
+}
+
 .texx{
     margin-left: 40px;
 }
 .btna1{
-    border: 2px solid ;
+    /* border: 2px solid ; */
     border-radius: 20px;
     height:30px;
     width:10%;
@@ -21,13 +34,22 @@
     margin-left: 40px;
     margin-bottom: 40px;
 }
-
+.btna1:hover{
+    cursor: pointer;
+    background-color: #ff914d;
+    transform: translateY(5px);
+}
+.btn2:hover{
+    cursor: pointer;
+    background-color: #ff914d;
+    transform: translateY(5px);
+}
 .abtn11{
     margin-right: 80px;
     margin-left: 0px;
 }
 .btn2{
-    border: 2px solid ;
+    /* border: 2px solid ; */
     border-radius: 20px;
     height:30px;
     width:5%;
@@ -48,33 +70,40 @@
     width:60%;
     border-radius: 10px;
 }
+.inrbtn:hover{
+    transform: rotate(5deg);
+    cursor:pointer;
+}
 #child1{
     display: grid;
     grid-template-columns: repeat(4,25%);
     
     padding-left: 40px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 80%;
     
 }
 .child11{
     height: 200px;
     width:200px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 #pricingparent2{
     display: grid;
     grid-template-columns: repeat(4,25%);
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-top: 50px;
     background: #f8f8f8;
 }
 .childprice{
     width: 80%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
+}
+#nomargin{
+    margin-left: 20px;
 }
 #startparent{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
     width: 70%;
     height: 100%;
@@ -84,10 +113,10 @@
 #image{
     width:400px;
     height:300px;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 #startchild{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 45%;
     line-height: 30px;
 }
@@ -99,22 +128,23 @@
     border-radius: 40px;
 }
 #helpparent{
-    border: 1px solid red;
-    width: 100%;
+    /* border: 1px solid red; */
+    width: 80%;
     height: 100%;
     display: flex;
     justify-content: space-between;
     background: #f8f8f8;
+    margin: auto;
 
 }
 #img2{
-    width:100px;
-    height: 90px;
+    width:80px;
+    height: 80px;
     border-radius: 50%;
 }
 #child01{
     padding: 10px;
-    border: 1px solid cyan;
+    /* border: 1px solid cyan; */
     width: 40%;
     height: 100%;
     display: flex;
@@ -122,25 +152,25 @@
 }
 #child011{
     display: flex;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 60%;
     justify-content: space-between;
     height: 100%;
     
 }
 #child111{
-    border: solid;
+    /* border: solid; */
     width:60%
 }
 #futimg1{
     width: 90%;
-    border: solid;
+    /* border: solid; */
 }
 #form{
     background: #fff;
     box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
     border-radius: 4px;
-    width: 40%;
+    width: 50%;
     padding: 55px 25px;
     box-sizing: border-box;
     margin-left: 40px;
@@ -190,18 +220,27 @@ a{
         grid-template-columns: repeat(4,25%);
         grid-template-rows: repeat(1,350px);
         
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 90%;
        
     }
+    #helpparent{
+        /* border: 1px solid red; */
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        background: #f8f8f8;
+        margin: auto;
     
+    }
     .child11{
         height: 250px;
         width:130px;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
     .btna1{
-        border: 2px solid ;
+        /* border: 2px solid ; */
         border-radius: 20px;
         height:30px;
         width:20%;
@@ -218,7 +257,7 @@ a{
         margin-left: 0px;
     }
     .btn2{
-        border: 2px solid ;
+        /* border: 2px solid ; */
         border-radius: 20px;
         height:30px;
         width:6%;
@@ -237,7 +276,7 @@ a{
     #pricingparent2{
         display: grid;
         grid-template-columns: repeat(3,35%);
-        border: 1px solid red;
+        /* border: 1px solid red; */
         margin-top: 50px;
         background: #f8f8f8;
     }
@@ -246,7 +285,7 @@ a{
     }
     
     #startparent{
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         display: flex;
         flex-direction: column;
         width: 70%;
@@ -257,10 +296,10 @@ a{
     #image{
         width:100%;
         height:300px;
-        border: 1px solid;
+        /* border: 1px solid; */
     }
     #startchild{
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 90%;
         padding: 20px;
         height: 100%;
@@ -274,7 +313,7 @@ a{
     }
     #child01{
         padding: 10px;
-        border: 1px solid cyan;
+        /* border: 1px solid cyan; */
         width: 40%;
         height: 100%;
         display: flex;
@@ -282,7 +321,7 @@ a{
     }
     #child011{
         display: flex;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 100%;
         justify-content: space-between;
         height: 100%;
@@ -290,12 +329,12 @@ a{
         
     }
     #child111{
-        border: solid;
+        /* border: solid; */
         width:60%
     }
     #futimg1{
         width:100%;
-        border: solid;
+        /* border: solid; */
     }
     #form{
         background: #fff;
@@ -307,13 +346,25 @@ a{
         /* margin-left: 40px; */
         
         }
+        .inrbtn{
+            background-color:#4e00ac;
+            border: none;
+            color: white;
+            height: 40px;
+            width:60%;
+            border-radius: 10px;
+        }
+        .inrbtn:hover{
+            transform: rotate(5deg);
+            cursor:pointer;
+        }
 }
 @media screen and (max-width:649px) and (min-width:450px) {
     #child1{
         display: grid;
         grid-template-columns: repeat(2,55%);
         grid-template-rows: repeat(2,200px);
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 90%;
         
         
@@ -322,11 +373,11 @@ a{
     .child11{
         height: 100%;
         width:80%;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
 
     .btna1{
-        border: 2px solid ;
+        /* border: 2px solid ; */
         border-radius: 20px;
         height:30px;
         width:20%;
@@ -344,7 +395,7 @@ a{
         margin-left: 0px;
     }
     .btn2{
-        border: 2px solid ;
+        /* border: 2px solid ; */
         border-radius: 20px;
         height:30px;
         width:8%;
@@ -355,9 +406,13 @@ a{
         
     }
     .childprice{
-        width: 80%;
-        border: 1px solid blue;
+        width: 100%;
+        /* border: 1px solid blue; */
+        /* height: 100%; */
         height: 100%;
+        margin: auto;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+        padding: 5px;
     }
     .childprice ul{
         display: none;
@@ -368,21 +423,25 @@ a{
     
     #pricingparent2{
         display: grid;
-        grid-template-columns: repeat(1,100%);
+        grid-template-columns: repeat(1,70%);
         grid-template-rows: repeat(3,33%);
-        border: 1px solid red;
+        gap: 20px;
+        /* border: 1px solid red; */
+        margin-bottom: 50px;
         height: 100%;
         margin-top: 50px;
         background: #f8f8f8;
+        justify-content: center;
+
     }
     .pa{
         display: none;
     }
     #startparent{
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         display: flex;
         flex-direction: column;
-        width: 70%;
+        width: 100%;
         height: 100%;
         margin: auto;
         justify-content: space-between;
@@ -391,10 +450,10 @@ a{
     #image{
         width:100%;
         height:200px;
-        border: 1px solid;
+        /* border: 1px solid; */
     }
     #startchild{
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 90%;
         padding: 20px;
         height: 100%;
@@ -409,7 +468,7 @@ a{
 
     #child011{
         display: flex;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 100%;
         justify-content: space-between;
         height: 100%;
@@ -417,7 +476,7 @@ a{
         
     }
     #helpparent{
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 100%;
         height: 100%;
         display: flex;
@@ -432,10 +491,10 @@ a{
         background: #fff;
         box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
         border-radius: 4px;
-        width: 100%;
+        width: 90%;
         padding: 55px 25px;
         box-sizing: border-box;
-        margin-left: 40px;
+        /* margin-left: 40px; */
         
         }
         .inputs{
@@ -474,6 +533,21 @@ a{
         text-decoration: none;
          color: blue;
         font-weight: 500;
+    }
+    #nomargin{
+        margin-left: 0px;
+    }
+    .inrbtn{
+        background-color:#4e00ac;
+        border: none;
+        color: white;
+        height: 40px;
+        width:40%;
+        border-radius: 10px;
+    }
+    .inrbtn:hover{
+        transform: rotate(5deg);
+        cursor:pointer;
     }
 
 }
