--- a/stream.css
+++ b/stream.css
@@ -73,7 +73,7 @@ hr{
         display: flex;
         justify-content: space-around;
         font-size: 16px;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 100%;
     }
     
